# ci_demo

./: .gitignore  LICENSE  README.md  app.py  demo.sh  end_to_end.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: CI_PIPELINE_EXPLAINED.md
tests/: test_app.py
